salesforce_sfdx/main/default/objects/OSMX_Spread_Piso_Cuadrante__c/OSMX_Spread_Piso_Cuadrante__c.object-meta.xml
<CustomObject>
    <description>Tabla de Spread piso cuadrante</description>
    <label>OSMX_Spread_Piso_Cuadrante</label>
    <nameField>
        <label>OSMX_SPREAD_PISO_CUADRANTE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_Spread_Piso_Cuadrante</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>