salesforce_sfdx/main/default/objects/OSMX_Spread_Piso_Cuadrante__c/fields/Cuadrante__c.field-meta.xml
<CustomField>
    <fullName>Cuadrante__c</fullName>
    <label>Cuadrante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>