salesforce_sfdx/main/default/objects/OSMX_Spread_Piso_Cuadrante__c/fields/Estructura_de_precio__c.field-meta.xml
<CustomField>
    <fullName>Estructura_de_precio__c</fullName>
    <label>Estructura de precio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>