salesforce_sfdx/main/default/objects/OSMX_Spread_Piso_Cuadrante__c/fields/Valor_spread_piso__c.field-meta.xml
<CustomField>
    <fullName>Valor_spread_piso__c</fullName>
    <label>Valor_spread_piso</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>